# c7

./: README.md
TKMovesets2/: CMakeLists.txt  app.rc.in  c7.manifest.in
TKMovesets2/GameInteractions/: GameInteraction.cpp  GameSharedMem.cpp  GameSharedMem.hpp  MatchReporting.cpp  MatchReporting.hpp
TKMovesets2/GameInteractions/GameProcess/: GameProcess.cpp  GameProcess.hpp
TKMovesets2/GameSpecific/Importers/: lastLoadedMoveset.h
TKMovesets2/GameSpecific/Importers/Importer_t7/: Importer_t7.cpp  Importer_t7.hpp  Importer_t7_Utils.cpp  Importer_t7_Utils.hpp
TKMovesets2/GameSpecific/Online/: Online.cpp  Online.hpp  Online_t7.cpp
TKMovesets2/Injected/: MovesetLoader.cpp  MovesetLoader.hpp
TKMovesets2/Injected/MovesetLoaders/: MovesetLoader_t7.cpp  MovesetLoader_t7.hpp
TKMovesets2/Injected/SharedMemory/: SharedMemory.h  SharedMemory_t7.h
TKMovesets2/Layouts/: MainWindow.cpp  MainWindow.hpp  NavigationMenu.cpp  NavigationMenu.hpp  SideMenu.cpp
TKMovesets2/Layouts/Submenus/: Submenu_About.cpp  Submenu_Status.cpp  Submenu_Status.hpp
TKMovesets2/LocalStorage/: LocalStorage.cpp  LocalStorage.hpp
TKMovesets2/Resources/: en-US.txt  game_addresses.ini
TKMovesets2/ResourcesClasses/: EditorLabel.cpp
TKMovesets2/Updater/: UpdateCheck.cpp
TKMovesets2/Utils/: constants.h
TKMovesets2/main/: main.cpp  run_gui.cpp
